--- a/travelpoints_frontend/src/styles/HomeAdmin.css
+++ b/travelpoints_frontend/src/styles/HomeAdmin.css
@@ -40,13 +40,18 @@
 }
 
 .landing-header-with-breadcrumbs {
-    display: flex;
-    justify-content: space-between; 
-    align-items: center;
-    padding: 20px 40px;
-    border-bottom: 1px solid #ccc;
-    background-color: white;
-    position: relative;
+    height: 80px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: white;
+  z-index: 1000;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
+  border-bottom: 1px solid #ddd;
 }
 
 
